Corrected button size on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,7 @@ label {
 .result-message p {
   font-size: 0.8rem;
   font-weight: 700;
-  margin-right: 1.5em;
+  margin-right: 2em;
 }
 
 /*** Tests style ***/
@@ -156,7 +156,7 @@ label.correct-answer {
 }
 
 .result-message {
-  margin: 3em 2em;
+  margin: 3em 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -182,6 +182,14 @@ label.correct-answer {
 
 .prime-btn:active {
   transform: scale(0.95);
+}
+
+@media (max-width: 500px) {
+  .secondary-button {
+    padding: 0.8em 1.6em;
+    font-size: 0.8rem;
+    width: 50%;
+  }
 }
 
 .check-btn {
